fix(ui): Link fieldtype, show display field - make address a manually named entry type - make a few more entry types searchable - fix dropdown filter undefined issue - reset settings docs if not saved - fix ux dropdown toggle on click

--- a/schemas/app/PrintSettings.json
+++ b/schemas/app/PrintSettings.json
@@ -35,6 +35,7 @@
       "fieldtype": "Link",
       "target": "Address",
       "inline": true,
+      "create": true,
       "section": "Contacts"
     },
     {
