--- a/schemas/app/inventory/InventorySettings.json
+++ b/schemas/app/inventory/InventorySettings.json
@@ -66,7 +66,8 @@
     {
       "fieldname": "enableSerialNo",
       "label": "Enable Serial No",
-      "fieldtype": "Check"
+      "fieldtype": "Check",
+      "section": "Feature Flags"
     },
     {
       "fieldname": "enableUomConversions",
