--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -5,6 +5,7 @@ extraResources:
   [
     { from: 'log_creds.txt', to: '../creds/log_creds.txt' },
     { from: 'translations', to: '../translations' },
+    { from: 'translations', to: '../translations' },
   ]
 mac:
   type: distribution
