--- a/schemas/app/AccountingSettings.json
+++ b/schemas/app/AccountingSettings.json
@@ -80,6 +80,13 @@
       "section": "Feature Flags"
     },
     {
+      "fieldname": "enablePriceList",
+      "label": "Enable Price List",
+      "fieldtype": "Check",
+      "default": false,
+      "section": "Feature Flags"
+    },
+    {
       "fieldname": "fiscalYearStart",
       "label": "Fiscal Year Start Date",
       "fieldtype": "Date",
