feat: delivery note

--- a/schemas/app/inventory/InventorySettings.json
+++ b/schemas/app/inventory/InventorySettings.json
@@ -68,6 +68,12 @@
       "label": "Enable UOM Conversion",
       "fieldtype": "Check",
       "section": "Feature Flags"
+    },
+    {
+      "fieldname": "enableDeliveryNote",
+      "label": "Enable Delivery Note",
+      "fieldtype": "Check",
+      "section": "Feature Flags"
     }
   ]
 }
