fix: replace path after a doc has been inserted - reword "Features Flags" to "Features" - reword "Save to database" - fix "New Entry" display - fix address sectioning

--- a/schemas/app/inventory/InventorySettings.json
+++ b/schemas/app/inventory/InventorySettings.json
@@ -55,19 +55,19 @@
       "fieldname": "enableBarcodes",
       "label": "Enable Barcodes",
       "fieldtype": "Check",
-      "section": "Feature Flags"
+      "section": "Features"
     },
     {
       "fieldname": "enableBatches",
       "label": "Enable Batches",
       "fieldtype": "Check",
-      "section": "Feature Flags"
+      "section": "Features"
     },
     {
       "fieldname": "enableUomConversions",
       "label": "Enable UOM Conversion",
       "fieldtype": "Check",
-      "section": "Feature Flags"
+      "section": "Features"
     }
   ]
 }
