chore: add script to build arm64 locally and publish

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ node_modules
 
 # local env files
 .env
+.env.publish
 .env.local
 .env.*.local
 
@@ -24,4 +25,5 @@ yarn-error.log*
 
 #Electron-builder output
 /dist_electron
+/build_publish
 log_creds.txt
