build: create app protocol - add a build script (wip not yet packaged)

--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
   },
   "scripts": {
     "dev": "node build/scripts/dev.mjs",
+    "build": "node build/scripts/build.mjs",
     "dev:main": "node build/scripts/dev.mjs --no-renderer",
     "dev:renderer": "yarn vite",
-    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "release": "scripts/publish-mac-arm.sh",
     "postinstall": "electron-rebuild",
     "postuninstall": "electron-rebuild",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
     "script:translate": "scripts/runner.sh scripts/generateTranslations.ts",
     "script:profile": "scripts/profile.sh",
     "test": "scripts/test.sh"
@@ -73,6 +71,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
     "execa": "^7.1.1",
+    "fs-extra": "^11.1.1",
     "lint-staged": "^11.2.6",
     "postcss": "^8",
     "prettier": "^2.4.1",
