chore: bump lint dependencies - add code mirror dependencies to silence warning - bump node version to allow execa

--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@codemirror/language": "^6.0.0",
+    "@codemirror/state": "^6.0.0",
+    "@codemirror/view": "^6.0.0",
+    "@lezer/common": "^1.0.0",
     "@types/assert": "^1.5.6",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/lodash": "^4.14.179",
@@ -43,8 +47,8 @@
     "@types/node": "^17.0.23",
     "@types/node-fetch": "^2.6.1",
     "@types/tape": "^4.13.2",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@typescript-eslint/eslint-plugin": "5.60.0",
+    "@typescript-eslint/parser": "5.60.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^9",
     "chokidar": "^3.5.3",
@@ -54,10 +58,10 @@
     "electron-devtools-installer": "^3.2.0",
     "electron-rebuild": "^3.2.9",
     "electron-updater": "^5.2.1",
-    "eslint": "^7.32.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^7.0.0",
+    "eslint-plugin-vue": "^9.15.0",
     "execa": "^7.1.1",
     "fs-extra": "^11.1.1",
     "postcss": "^8",
