chore: add lint workflow - fix filter issue in List.vue - update readme with inspect notes - fix log_creds.txt path for dev

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "postuninstall": "electron-rebuild",
     "script:translate": "scripts/runner.sh scripts/generateTranslations.ts",
     "script:profile": "scripts/profile.sh",
-    "test": "scripts/test.sh"
+    "test": "scripts/test.sh",
+    "lint": "eslint . --ext ts,vue"
   },
   "dependencies": {
     "@codemirror/autocomplete": "^6.4.2",
