--- a/schemas/app/AccountingSettings.json
+++ b/schemas/app/AccountingSettings.json
@@ -73,6 +73,13 @@
       "section": "Features"
     },
     {
+      "fieldname": "enableInvoiceReturns",
+      "label": "Enable Invoice Returns",
+      "fieldtype": "Check",
+      "default": false,
+      "section": "Features"
+    },
+    {
       "fieldname": "enableInventory",
       "label": "Enable Inventory",
       "fieldtype": "Check",
