--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/scripts/build.mjs",
     "release": "scripts/publish-mac-arm.sh",
     "postinstall": "electron-rebuild",
+    "sqlite-rebuild": "electron-rebuild -f -w better-sqlite3",
     "postuninstall": "electron-rebuild",
     "script:translate": "scripts/runner.sh scripts/generateTranslations.ts",
     "script:profile": "scripts/profile.sh",
