--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "script:translate": "scripts/runner.sh scripts/generateTranslations.ts",
     "script:profile": "scripts/profile.sh",
     "test": "scripts/test.sh",
+    "uitest": "node uitest/index.mjs | tap-spec",
     "lint": "eslint . --ext ts,vue"
   },
   "dependencies": {
@@ -44,7 +45,6 @@
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/lodash": "^4.14.179",
     "@types/luxon": "^2.3.1",
-    "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.23",
     "@types/node-fetch": "^2.6.1",
     "@types/tape": "^4.13.2",
@@ -65,6 +65,7 @@
     "eslint-plugin-vue": "^9.15.0",
     "execa": "^7.1.1",
     "fs-extra": "^11.1.1",
+    "playwright": "^1.35.1",
     "postcss": "^8",
     "prettier": "^2.4.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
