--- a/schemas/app/AccountingSettings.json
+++ b/schemas/app/AccountingSettings.json
@@ -87,6 +87,13 @@
       "section": "Features"
     },
     {
+      "fieldname": "enableStockReturns",
+      "label": "Enable Stock Returns",
+      "fieldtype": "Check",
+      "default": false,
+      "section": "Features"
+    },
+    {
       "fieldname": "fiscalYearStart",
       "label": "Fiscal Year Start Date",
       "fieldtype": "Date",
