--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-fetch": "2",
     "pesa": "^1.1.12",
     "source-map-support": "^0.5.21",
+    "to-words": "^3.6.1",
     "vue": "^3.2.40",
     "vue-router": "^4.0.12"
   },
