--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "node build/scripts/dev.mjs",
+    "plugins": "node build/scripts/plugins.mjs",
     "build": "node build/scripts/build.mjs",
     "release": "scripts/publish-mac-arm.sh",
     "postinstall": "electron-rebuild",
@@ -23,6 +24,7 @@
     "@codemirror/autocomplete": "^6.4.2",
     "@codemirror/lang-vue": "^0.1.1",
     "@popperjs/core": "^2.10.2",
+    "adm-zip": "^0.5.10",
     "better-sqlite3": "^7.5.3",
     "codemirror": "^6.0.1",
     "core-js": "^3.19.0",
@@ -42,6 +44,7 @@
     "@codemirror/state": "^6.0.0",
     "@codemirror/view": "^6.0.0",
     "@lezer/common": "^1.0.0",
+    "@types/adm-zip": "^0.5.0",
     "@types/assert": "^1.5.6",
     "@types/better-sqlite3": "^7.6.4",
     "@types/electron-devtools-installer": "^2.2.0",
