refactor: pos shift & pos settings schemas

--- a/schemas/app/inventory/Point of Sale/POSSettings.json
+++ b/schemas/app/inventory/Point of Sale/POSSettings.json
@@ -4,20 +4,5 @@
   "isSingle": true,
   "isChild": false,
   "isSubmittable": true,
-  "fields": [
-    {
-      "fieldname": "discountAfterTax",
-      "label": "Apply Discount After Tax",
-      "fieldtype": "Check",
-      "default": false,
-      "section": "Default"
-    },
-    {
-      "fieldname": "hideImages",
-      "label": "Hide Images",
-      "fieldtype": "Check",
-      "default": false,
-      "section": "Default"
-    }
-  ]
+  "fields": []
 }
