--- a/schemas/app/AccountingSettings.json
+++ b/schemas/app/AccountingSettings.json
@@ -101,6 +101,13 @@
       "section": "Features"
     },
     {
+      "fieldname": "itemAccountFiltering",
+      "label": "Filter out non expense accounts for items",
+      "fieldtype": "Check",
+      "default": true,
+      "section": "Features"
+    },
+    {
       "fieldname": "fiscalYearStart",
       "label": "Fiscal Year Start Date",
       "fieldtype": "Date",
