fix(ux): disable Pay, Submit buttons on conditions

--- a/schemas/app/inventory/Point of Sale/POSSettings.json
+++ b/schemas/app/inventory/Point of Sale/POSSettings.json
@@ -18,6 +18,7 @@
       "label": "Counter Cash Account",
       "fieldtype": "Link",
       "target": "Account",
+      "default": "Cash In Hand",
       "required": true,
       "create": true,
       "section": "Default"
