--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@codemirror/autocomplete": "^6.4.2",
     "@codemirror/lang-vue": "^0.1.1",
     "@popperjs/core": "^2.10.2",
-    "better-sqlite3": "^7.5.3",
+    "better-sqlite3": "^9.2.2",
     "codemirror": "^6.0.1",
     "core-js": "^3.19.0",
     "electron-store": "^8.0.1",
@@ -35,12 +35,14 @@
     "pesa": "^1.1.12",
     "source-map-support": "^0.5.21",
     "vue": "^3.2.40",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@codemirror/language": "^6.0.0",
     "@codemirror/state": "^6.0.0",
     "@codemirror/view": "^6.0.0",
+    "@electron/rebuild": "^3.4.1",
     "@lezer/common": "^1.0.0",
     "@types/assert": "^1.5.6",
     "@types/better-sqlite3": "^7.6.4",
@@ -56,11 +58,10 @@
     "autoprefixer": "^9",
     "chokidar": "^3.5.3",
     "dotenv": "^16.0.0",
-    "electron": "18.3.7",
-    "electron-builder": "^24.4.0",
+    "electron": "22.3.27",
+    "electron-builder": "^24.9.1",
     "electron-devtools-installer": "^3.2.0",
-    "electron-rebuild": "^3.2.9",
-    "electron-updater": "^5.2.1",
+    "electron-updater": "^6.1.7",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -81,6 +82,9 @@
     "vite": "^4.3.9",
     "vue-tsc": "^1.6.5",
     "yargs": "^17.7.2"
+  },
+  "resolutions": {
+    "node-abi": "^3.54.0"
   },
   "prettier": {
     "semi": true,
