fixed issue template prettifier issues

--- a/.github/ISSUE_TEMPLATE/1-bug_template.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug_template.yml
@@ -1,7 +1,7 @@
-name: "🐛 Bug Report"
+name: '🐛 Bug Report'
 description: Create a new ticket for a bug.
-title: "🐛 [Bug] - <title>"
-labels: [ "bug" ]
+title: '🐛 [Bug] - <title>'
+labels: ['bug']
 
 body:
   - type: markdown
@@ -15,7 +15,7 @@ body:
 
         ### Steps to Reproduce
         ---
-    
+
         Please try to describe the issue as best as possible
 
         1. Go to '...'
@@ -26,7 +26,7 @@ body:
   - type: input
     id: version
     attributes:
-      label: "FrappeBooks Version"
+      label: 'FrappeBooks Version'
       # description: Please enter your GitHub URL to provide a reproduction of the issue
       placeholder: ex. 0.20.0
     validations:
@@ -35,7 +35,7 @@ body:
   - type: input
     id: path_feature_name
     attributes:
-      label: "Path or Feature name"
+      label: 'Path or Feature name'
       description: Please enter the path (i.e. /import-wizard) or Feature name where the bug was seen
       placeholder: ex. Import-Wizard
     validations:
@@ -44,16 +44,16 @@ body:
   - type: input
     id: country_code
     attributes:
-      label: "Country"
+      label: 'Country'
       description: Please enter the two digit country code for your country (i.e. BR, CH, IN, US)
       placeholder: ex. IN
     validations:
       required: true
-      
+
   - type: input
     id: language
     attributes:
-      label: "Language"
+      label: 'Language'
       description: Please enter the two digit language code or full lanaguage used in the application
       placeholder: ex. EN or english
     validations:
@@ -62,7 +62,7 @@ body:
   - type: dropdown
     id: os
     attributes:
-      label: "OS"
+      label: 'OS'
       description: What is the impacted environment ?
       multiple: true
       options:
@@ -80,7 +80,7 @@ body:
   - type: input
     id: additional_os_info
     attributes:
-      label: "Additional OS Info"
+      label: 'Additional OS Info'
       description: Please enter any additional information regarding your OS that may aid in troubleshooting (i.e. Macos 10.14, Ubuntu 20.04, etc)
       placeholder: ex. Macos 10.14 / Ubuntu 20.04
     validations:
