--- a/.github/ISSUE_TEMPLATE/2-feature_template.yml
+++ b/.github/ISSUE_TEMPLATE/2-feature_template.yml
@@ -1,22 +1,22 @@
-name: "💡 Feature Request"
+name: '💡 Feature Request'
 description: Create a new ticket for a new feature request
-title: "💡 [Feature Request] - <title>"
-labels: [ "enhancement" ]
+title: '💡 [Feature Request] - <title>'
+labels: ['enhancement']
 
 body:
   - type: textarea
     id: summary
     attributes:
-      label: "Summary"
+      label: 'Summary'
       description: Provide a brief explanation of the feature
       placeholder: Describe in a few lines your feature request
     validations:
       required: true
-      
+
   - type: textarea
     id: basic_example
     attributes:
-      label: "Basic Example"
+      label: 'Basic Example'
       description: Indicate here some basic examples of your feature.
       placeholder: A few specific words about your feature request.
     validations:
@@ -25,7 +25,7 @@ body:
   - type: textarea
     id: drawbacks
     attributes:
-      label: "Drawbacks"
+      label: 'Drawbacks'
       description: What are the drawbacks/impacts of your feature request ?
       placeholder: Identify the drawbacks and impacts while being neutral on your feature request
     validations:
@@ -34,8 +34,8 @@ body:
   - type: textarea
     id: reference_issues
     attributes:
-      label: "Reference Issues"
+      label: 'Reference Issues'
       description: Common issues
-      placeholder: "#Issues IDs"
+      placeholder: '#Issues IDs'
     validations:
       required: false
