--- a/.github/ISSUE_TEMPLATE/3-general_question_template.yml
+++ b/.github/ISSUE_TEMPLATE/3-general_question_template.yml
@@ -1,14 +1,14 @@
-name: "General Question"
+name: 'General Question'
 description: Create a new ticket for a general question
-title: "🐛 [General Question] - <title>"
-labels: [ "question" ]
+title: '🐛 [General Question] - <title>'
+labels: ['question']
 
 body:
   - type: textarea
     id: summary
     attributes:
-      label: "Summary"
+      label: 'Summary'
       description: General Question(s) (for Bugs and Feature Requests, please use the appropriate template)
-      placeholder: "..."
+      placeholder: '...'
     validations:
       required: true
