--- a/.github/ISSUE_TEMPLATE/2-feature_template.yml
+++ b/.github/ISSUE_TEMPLATE/2-feature_template.yml
@@ -14,6 +14,15 @@ body:
       required: true
 
   - type: textarea
+    id: benefits
+    attributes:
+      label: 'What problem are you trying to solve?'
+      description: Tell us what is the thing you are doing and why this feature would help you in that
+      placeholder: Describe the problem or issue that the feature would solve
+    validations:
+      required: true
+
+  - type: textarea
     id: basic_example
     attributes:
       label: 'Basic Example'
