--- a/.github/ISSUE_TEMPLATE/1-bug_template.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug_template.yml
@@ -4,24 +4,36 @@ title: '🐛 [Bug] - <title>'
 labels: ['bug']
 
 body:
-  - type: markdown
+  - type: textarea
+    id: expected_behavior
     attributes:
-      value: |
-        ### Expected Behavior
-        ---
+      label: 'Expected Behavior'
+      description: What was the expected behavior?
+      placeholder: "..."
+    validations:
+      required: false
+      
+  - type: textarea
+    id: current_behavior
+    attributes:
+      label: 'Current Behavior'
+      description: What is the current behavior?
+      placeholder: "..."
+    validations:
+      required: false
 
-        ### Current Behavior
-        ---
-
-        ### Steps to Reproduce
-        ---
-
-        Please try to describe the issue as best as possible
-
-        1. Go to '...'
-        2. Click on '....'
-        3. Scroll down to '....'
-        4. See error
+  - type: textarea
+    id: steps_to_reproduce
+    attributes:
+      label: 'Steps to Reproduce'
+      description: Please try to describe the issue as best as possible
+      placeholder: |
+              1. Go to '...'
+              2. Click on '....'
+              3. Scroll down to '....'
+              4. See error
+    validations:
+      required: false
 
   - type: input
     id: version
