--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -11,8 +11,8 @@ mac:
   type: distribution
   category: public.app-category.finance
   icon: build/icon.icns
-  notarize:
-    appBundleId: io.frappe.books
+  # notarize:
+  #   appBundleId: io.frappe.books
   hardenedRuntime: true
   gatekeeperAssess: false
   darkModeSupport: false
