Changed Payment Reference Type
Reasoning: If the outstanding amount is negative means that amount was deducted/debited from the account hence the reference type should be PurchaseInvoice instead of SalesInvoice.

Result - The "FromAccount" in both role party is displaying the same menu as the single role party.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,10 @@
       "reports/*": ["reports/*"],
       "models/*": ["models/*"],
       "utils/*": ["utils/*"],
-      "dummy/*": ["dummy/*"]
+      "dummy/*": ["dummy/*"],
+      "webpack-env": [
+        "./node_modules/@types/webpack-env"
+      ]
     },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
