fix: change in-app docs links to docs.frappe.io/books
* docs.frappebooks.com is no longer resolvable. This breaks many documentation links both in-app and on README.md. Update the links to docs.frappe.io/books.
* Also update general links to frappebooks.com to frappe.io/books

--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "homepage": "https://frappebooks.com",
+  "homepage": "https://frappe.io/books",
   "repository": {
     "url": "https://github.com/frappe/books"
   },
