fix: changed the default value false from string to boolean in SystemSettings.json

--- a/schemas/core/SystemSettings.json
+++ b/schemas/core/SystemSettings.json
@@ -122,7 +122,7 @@
       "fieldname": "darkMode",
       "label": "Dark mode",
       "fieldtype": "Check",
-      "default": "false",
+      "default": false,
       "description": "Sets the theme of the app.",
       "section": "Theme"
     }
