--- a/schemas/app/AccountingSettings.json
+++ b/schemas/app/AccountingSettings.json
@@ -101,6 +101,13 @@
       "section": "Features"
     },
     {
+      "fieldname": "enableERPNextSync",
+      "label": "Enable ERPNext Sync",
+      "fieldtype": "Check",
+      "default": false,
+      "section": "Features"
+    },
+    {
       "fieldname": "enableLead",
       "label": "Enable Lead",
       "fieldtype": "Check",
