chore: refactor code

--- a/schemas/app/inventory/Point of Sale/POSSettings.json
+++ b/schemas/app/inventory/Point of Sale/POSSettings.json
@@ -39,14 +39,14 @@
       "options": [
         {
           "value": "Classic",
-          "label": "POS1"
+          "label": "Classic"
         },
         {
           "value": "Modern",
-          "label": "POS2"
+          "label": "Modern"
         }
       ],
-      "default": "POS1",
+      "default": "Classic",
       "required": true,
       "section": "Default"
     }
