--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,7 @@ jobs:
           - os: windows-2019
             opt: '--win'
             dist: 'dist-windows'
+            shell: bash
 
     steps:
       - name: Setup node
