--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,19 +9,19 @@ jobs:
     strategy:
       matrix:
         include:
-          - { os: macos-14, shell: bash, opt: '--mac', dist: 'dist-macOS-arm' },
+          - { os: macos-14, shell: bash, opt: '--mac', dist: 'dist-macOS-arm' }
           - {
               os: macos-13,
               shell: bash,
               opt: '--mac',
               dist: 'dist-macOS-x86_64',
-            },
+            }
           - {
               os: ubuntu-latest,
               shell: bash,
               opt: '--linux',
               dist: 'dist-linux',
-            },
+            }
           - {
               os: windows-2019,
               shell: bash,
