feat: add option to display time in templates

--- a/schemas/app/PrintSettings.json
+++ b/schemas/app/PrintSettings.json
@@ -120,6 +120,12 @@
       "label": "Display Amount In Words",
       "fieldtype": "Check",
       "section": "Customizations"
+    },
+    {
+      "fieldname": "displayTime",
+      "label": "Display Time In Invoice",
+      "fieldtype": "Check",
+      "section": "Customizations"
     }
   ]
 }
