--- a/schemas/app/inventory/Point of Sale/POSSettings.json
+++ b/schemas/app/inventory/Point of Sale/POSSettings.json
@@ -58,6 +58,14 @@
       "section": "Default"
     },
     {
+      "fieldname": "submitInvoice",
+      "label": "Post Payment",
+      "fieldtype": "Check",
+      "default": false,
+      "description": "create invoice and shipment with payment option later.",
+      "section": "Default"
+    },
+    {
       "fieldname": "weightEnabledBarcode",
       "label": "Weigth Enabled Barcode",
       "fieldtype": "Check",
