refactor: pos shift opening and closing seperated to two files

--- a/schemas/app/inventory/Point of Sale/POSSettings.json
+++ b/schemas/app/inventory/Point of Sale/POSSettings.json
@@ -5,6 +5,13 @@
   "isChild": false,
   "fields": [
     {
+      "fieldname": "isShiftOpen",
+      "label": "Is POS Shift Open",
+      "fieldtype": "Check",
+      "default": false,
+      "hidden": false
+    },
+    {
       "fieldname": "inventory",
       "label": "Inventory",
       "fieldtype": "Link",
