upd: update PrintSettings schema

--- a/schemas/app/PrintSettings.json
+++ b/schemas/app/PrintSettings.json
@@ -126,6 +126,12 @@
       "label": "Display Time In Invoice",
       "fieldtype": "Check",
       "section": "Customizations"
+    },{
+      "fieldname": "posPrintWidth",
+      "label": "Pos Print Width",
+      "fieldtype": "Float",
+      "default": 10,
+      "section": "Customizations"
     }
   ]
 }
